--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   carousel_slider: ^2.2.1
+  font_awesome_flutter: ^8.8.1
+  google_fonts: ^1.1.0
 
 dev_dependencies:
   flutter_test:
