--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   google_fonts: ^1.1.0
   webview_flutter: ^0.3.24
+  animated_text_kit: ^2.2.0
 
 dev_dependencies:
   flutter_test:
