--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,15 +17,25 @@ dependencies:
   google_fonts: ^1.1.0
   webview_flutter: ^0.3.24
   animated_text_kit: ^2.2.0
+  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.0+1
+  firebase_storage: ^4.0.0
+  modal_progress_hud: ^0.1.3
+  fancy_on_boarding: ^1.6.0
+  shared_preferences: ^0.5.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  flutter_svg: 0.18.0
+
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
 
   # fonts:
   #   - family: Schyler
