--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   modal_progress_hud: ^0.1.3
   fancy_on_boarding: ^1.6.0
   shared_preferences: ^0.5.12
+  flare_flutter: ^2.0.6
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +37,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+    - assets/
 
   # fonts:
   #   - family: Schyler
