Created About Us Page

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\kaifa\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\src\\flutter
+sdk.dir=C:\\Users\\ddd_20\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\ddd_20\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
