--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   fancy_on_boarding: ^1.6.0
   shared_preferences: ^0.5.12
   flare_flutter: ^2.0.6
+  url_launcher: ^5.7.5
 
 dev_dependencies:
   flutter_test:
