--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   image_picker: ^0.6.7+11
   lottie: ^0.7.0+1
   smooth_star_rating: ^1.1.1
+  advance_pdf_viewer: ^1.2.0
 
 dev_dependencies:
   flutter_test:
