--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="demo"
+        android:label="KCC-Portal"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
         <activity
