--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.8.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -31,6 +31,9 @@ dependencies:
   lottie: ^0.7.0+1
   smooth_star_rating: ^1.1.1
   advance_pdf_viewer: ^1.2.0
+  fluttertoast: ^7.1.1
+  intl: ^0.16.1
+  simple_moment: ^1.0.7
 
 dev_dependencies:
   flutter_test:
