--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   intl: ^0.16.1
   simple_moment: ^1.0.7
   timeline_tile: ^1.0.0
+  popup_menu: ^1.0.5
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +52,7 @@ flutter:
     - assets/icons/
     - assets/lottie/
     - assets/
+    - assets/icons/vote/
 
   # fonts:
   #   - family: Schyler
