--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,11 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.1+1
   carousel_slider: ^2.3.1
-  font_awesome_flutter: ^8.10.0
+  font_awesome_flutter: ^8.10.1
   line_awesome_flutter: ^1.0.1
   google_fonts: ^1.1.1
   webview_flutter: ^1.0.7
-  animated_text_kit: ^2.5.4
+  animated_text_kit: ^3.0.1
   cloud_firestore: ^0.14.4
   firebase_auth: ^0.18.4+1
   firebase_storage: ^5.2.0
@@ -27,7 +27,7 @@ dependencies:
   flare_flutter: ^2.0.6
   url_launcher: ^5.7.5
   page_transition: ^1.1.7+3
-  image_picker: ^0.6.7+14
+  image_picker: ^0.6.7+15
   lottie: ^0.7.0+1
   smooth_star_rating: ^1.1.1
   advance_pdf_viewer: ^1.2.1+1
@@ -41,6 +41,8 @@ dependencies:
   autocomplete_textfield: ^1.7.3
   animated_onboarding: ^0.0.2
   provider: ^4.3.2+3
+  flutter_staggered_grid_view: ^0.3.2
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -51,12 +53,14 @@ flutter:
   assets:
     - assets/
     - assets/icons/
-    - assets/icons/SemesterIcons/
+    - assets/icons/homeButtons/
+    - assets/icons/semesterIcons/
     - assets/icons/vote/
     - assets/illustrations/
+    - assets/illustrations/onboarding/
     - assets/images/
+    - assets/images/kyc/
     - assets/lottie/
-
 
   # fonts:
   #   - family: Schyler
