--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.1+1
+  cupertino_icons: any
   carousel_slider: ^2.3.1
   font_awesome_flutter: ^8.10.1
   line_awesome_flutter: ^1.0.1
@@ -28,7 +28,6 @@ dependencies:
   image_picker: ^0.6.7+15
   lottie: ^0.7.0+1
   smooth_star_rating: ^1.1.1
-  advance_pdf_viewer: ^1.2.1+1
   fluttertoast: ^7.1.5
   intl: ^0.16.1
   simple_moment: ^1.0.7
@@ -41,6 +40,11 @@ dependencies:
   provider: ^4.3.2+3
   flutter_staggered_grid_view: ^0.3.2
   transparent_image: ^1.0.0
+  syncfusion_flutter_calendar: ^18.4.30
+  syncfusion_flutter_pdfviewer: ^18.4.32-beta
+  http: ^0.12.2
+  html: ^0.14.0+4
+  share: ^0.6.5+4
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +56,7 @@ flutter:
     - assets/
     - assets/icons/
     - assets/icons/homeButtons/
-    - assets/icons/semesterIcons/
+    - assets/icons/SemesterIcons/
     - assets/icons/vote/
     - assets/illustrations/
     - assets/illustrations/onboarding/
